force-app/main/default/objects/Product2/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <label>Departure Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>