force-app/main/default/objects/Product2/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>