force-app/main/default/objects/Product2/fields/Product_Final_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Final_Unit_Price__c</fullName>
    <label>Product Final Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>