force-app/main/default/objects/Product2/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel_Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>Semi-Deluxe</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>King Size</fullName>
            </value>
            <value>
                <fullName>Queen Size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>