force-app/main/default/objects/Product2/fields/TDX_Asset__c.field-meta.xml
<CustomField>
    <fullName>TDX_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TDX Asset</label>
    <referenceTo>TDX_Asset__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>