force-app/main/default/objects/Product2/recordTypes/Flight.recordType-meta.xml
<RecordType>
    <fullName>Flight</fullName>
    <active>true</active>
    <label>Flight</label>
</RecordType>