force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>TDX_Asset__c</columns>
    <columns>Departure_Location__c</columns>
    <columns>Arrival_Location__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Final_Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>