force-app/main/default/objects/Product2/listViews/Flight_Details.listView-meta.xml
<ListView>
    <fullName>Flight_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Arrival_Location__c</columns>
    <columns>Departure_Location__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Departure_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>AIR-</value>
    </filters>
    <label>Flight Details</label>
</ListView>