force-app/main/default/objects/Product2/listViews/Hotel_Details.listView-meta.xml
<ListView>
    <fullName>Hotel_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>TDX_Asset__c</columns>
    <columns>Room_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notContain</operation>
        <value>AIR-</value>
    </filters>
    <label>Hotel Details</label>
</ListView>